src/app/main/content/board/board.component.scss
@import "./../../../../styles.scss";

section {
  @include dFlex($ai: flex-start, $jc: flex-start);
  flex-direction: column;
  box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.1) inset;
  height: calc(100vh - 91px);
}

.input_field {
  @include dFlex($ai: center, $jc: space-between, $g: 24px);
  height: 48px;
  max-width: 312px;
  border-radius: 10px;
  border-color: $gray;
  border-style: solid;
  border-width: 1px;
  background-color: $white;
  padding: 8px;

  &:focus-within {
    border-color: $light_blue;
  }

  >img {
    padding-left: 16px;
    margin-right: 16px;
    height: 32px;
    width: 32px;
    border-left: 1px solid $light_gray;

  }
}

input {
  @include font($fs: 20px, $fw: 400);
  height: 100%;
  width: 100%;
  outline: none;
  border: none;
  background-color: transparent;
}

input::placeholder {
  @include font($fs: 20px, $fw: 400);
  color: $light_gray;
}

.input-search-btn {
  @include dFlex($ai: center, $jc: center);
  flex-direction: row;
}

.input-seperator {
  height: 24px;
  width: 2px;
  background-color: $gray;
}

.search-btn {
  width: 32px;
  height: 32px;
  border-radius: 50%;
  margin: 0px 12px 0 12px;
  padding: 4px;

  >img {
    width: 20px;
    height: 20px;
    margin-top: 2px;
    margin-left: 2px;
  }

  &:hover {
    cursor: pointer;
    background-color: $light_gray;
  }
}

.add_task_btn {
  @include font($fs: 24px, $fw: 700);
  @include dFlex($ai: center, $jc: space-evenly);
  height: 48px;
  width: 170px;
  margin-left: 32px;
  border-radius: 10px;
  color: $white;
  border: none;
  background-color: $dark_blue;
  padding: 8px 16px;
  white-space: nowrap;

  >img {
    height: 18px;
    width: 18px;
    margin-left: 6px;
  }

  &:hover {
    background-color: $light_blue;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    cursor: pointer;
  }
}

.btn_mobile {
  display: none;
}

.btn_desktop {
  display: block;
}

h1 {
  @include font($fs: 61px, $fw: 700);
}

h2 {
  @include font($fs: 20px, $fw: 700);
  color: $blueish_gray;
}

// h3 {
//     @include font($fs: 20px, $fw: 700);
// }

.board_header {
  @include dFlex($jc: space-between);
  flex-direction: row;
  // height: 10%;
  width: 100%;
  padding: 128px 56px 56px 56px;
}

.board_header_left {
  @include dFlex($jc: space-between);
  width: 100%;
}

.mobile_add_task_btn {
  display: none;

  >img {
    // background-color: $dark_blue;
    height: 25px;
    width: 24px;
  }
}

.board_header_right {
  @include dFlex($jc: space-between);
  width: 100%;
}

.board_content {
  @include dFlex($ai: flex-start, $jc: space-evenly, $g: 24px);
  flex-direction: row;
  height: 75%;
  width: 100%;
  padding: 16px 56px;
}

.board_content_header {
  @include dFlex($jc: space-between);
  width: 100%;
  margin-bottom: 23px;

  >button {
    height: 25px;
    width: 24px;
    background-image: url("./../../../../assets/img/icons/add_task_plus.svg");
    background-repeat: none;
    border: none;

    &:hover {
      background-image: url("./../../../../assets/img/icons/add_task_plus_hover.svg");
      cursor: pointer;
    }
  }
}

.to_do {
  @include dFlex($ai: flex-start, $jc: flex-start);
  flex-direction: column;
  height: 100%;
  width: 22%;
  position: relative;
  height: 50vh;
  // border: 2px solid $light_gray;
}

.in_progress {
  @include dFlex($ai: flex-start, $jc: flex-start);
  flex-direction: column;
  height: 100%;
  width: 22%;
  position: relative;
  height: 50vh;
  // border: 2px solid $light_gray;
}

.await_feedback {
  @include dFlex($ai: flex-start, $jc: flex-start);
  flex-direction: column;
  height: 100%;
  width: 22%;
  position: relative;
  height: 50vh;
  // border: 2px solid $light_gray;
}

.done {
  @include dFlex($ai: flex-start, $jc: flex-start);
  flex-direction: column;
  height: 100%;
  width: 22%;
  position: relative;
  height: 50vh;
  // border: 2px solid $light_gray;
}

.tasks_content {
  // @include dFlex($ai: flex-start, $jc: flex-start, $g: 10px);
  min-height: 64px;
  width: 100%;
  background-color: $light_gray;
}

.empty_bg {
  @include font($fs: 16px, $fw: 400);
  color: $gray;
  text-align: center;
  align-content: center;
  margin-top: 24px;
  min-height: 48px;
  width: 100%;
  background: $mid_gray;
  border-radius: 10px;
  border-style: dotted;
  border-color: $light_gray;
  border-width: 2px;
  overflow: auto;
  position: absolute;
  top: 24px;
  left: 0;
  z-index: -1;
}

h3 {
  @include font($fs: 16px, $fw: 700);
}

/* drag & drop cards */

.example-container {
  width: 400px;
  max-width: 100%;
  margin: 0 25px 25px 0;
  display: inline-block;
  vertical-align: top;
}

.example-list {
  @include dFlex($ai: flex-start, $jc: flex-start, $g: 10px);
  flex-direction: column;
  // border: solid 1px #ccc;
  min-height: 250px;
  width: 100%;
  border-radius: 4px;
  // overflow: auto;
  // height: 50vh;
}

app-single-task {
  width: 100%;
}

.cdk-drag-preview {
  box-sizing: border-box;
  border-radius: 4px;
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.cdk-drag-placeholder {
  opacity: 0;
}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.example-box:last-child {
  border: none;
}

.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

/* --------------------------------------------------------------------- Mobile ---------------------------------------------------------------------  */

@media (max-width: 1150px) {
  section {
    padding: 0;
  }

  h2 {
    font-size: 16px;
  }

  .board_content {
    @include dFlex($ai: flex-start, $jc: space-evenly, $g: 10px);
    padding: 16px;
  }
}

@media (max-width: 860px) {
section{
  height: auto;
}

.board_header_left {
  @include dFlex($ai: center, $jc: space-between);

    >h1 {
      font-size: 47px;
    }
  }

  .input_field {
    width: 100%;
  }

  .add_task_btn {
    display: none;
  }

  .btn_mobile {
    display: none;
  }

  .board_content {
    @include dFlex($ai: flex-start, $jc: space-evenly);
    flex-direction: column;
    width: 100%;
  }

  .empty_bg {
    display: none;
  }

  .example-list {
    flex-direction: row;
    overflow-x: scroll;
    scroll-behavior: smooth;
    justify-content: flex-start;
  }

  .to_do {
    width: 100%;
    padding-bottom: 32px;
    height: auto;
  }

  .in_progress {
    width: 100%;
    padding-bottom: 32px;
    height: auto;
  }

  .await_feedback {
    width: 100%;
    padding-bottom: 32px;
    height: auto;
  }

  .done {
    width: 100%;
    padding-bottom: 32px;
    height: auto;
  }
}

/*-------------------------------------------------- Overlay Add-Task --------------------------------------------------*/
.overlay_task {
  @include dFlex();
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: 100;
  background-color: rgba($black, 0.87)
}

.overlay_bg_white {
  @include dFlex();
  background-color: $white;
  width: 77vw;
  height: 85vh;
  border-radius: 24px;

  app-add-task {
    width: 100%;
    padding-bottom: 50px;
  }
}

@media (max-width: 1200px) {
  .overlay_task {
    display: none;
  }

  .board_header {
    @include dFlex($ai: center, $jc: flex-start, $g: 24px);
    flex-direction: column;
    padding: 48px 32px 24px 32px;
  }
  
  .board_header_right {
    @include dFlex($jc: center);
    width: 100%;
  }

  .mobile_add_task_btn {
    @include dFlex($ai: center, $jc: center);
    background-color: $dark_blue;
    border-radius: 10px;
    // display: block;
    height: 40px;
    width: 40px;
  }

  .btn_mobile {
    // display: none;
  }

  .btn_desktop {
    display: none;
  }
}

